--- a/source/templates/checkout.css
+++ b/source/templates/checkout.css
@@ -111,16 +111,20 @@ Inputs
   border-color: #5db6e8;
 }
 
-.braintree-hosted-fields-invalid {
-  border-color: #E53A40;
-  -webkit-animation: shake 500ms cubic-bezier(0.2, 1.3, 0.7, 1) both;
-          animation: shake 500ms cubic-bezier(0.2, 1.3, 0.7, 1) both;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-          perspective: 1000px;
+.braintree-hosted-fields-invalid, .input-wrapper.invalid {
+  border-color: #E53A40 !important;
+  -webkit-animation: shake 500ms cubic-bezier(0.2, 1.3, 0.7, 1) both !important;
+          animation: shake 500ms cubic-bezier(0.2, 1.3, 0.7, 1) both !important;
+  -webkit-transform: translate3d(0, 0, 0) !important;
+          transform: translate3d(0, 0, 0) !important;
+  -webkit-backface-visibility: hidden !important;
+          backface-visibility: hidden !important;
+  -webkit-perspective: 1000px !important;
+          perspective: 1000px !important;
+}
+
+.input-wrapper.invalid input {
+  color:#E53A40 !important;
 }
 
 #braintree-token-form input,
