--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,9 @@ h1,h2,h3,h4,h5,h6{
     font-family: Quicksand;
 }
 h1{
-    font-size: 3em;
+    font-size: 4em;
+    line-height: 0.8em;
+    font-weight: 300;
 }
 
 main {
