--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -8,9 +8,11 @@
 :root{
     font-size: 18px;
 }
+
 body{
     -webkit-font-smoothing: subpixel-antialiased;
     font-family: "Zilla Slab";
     font-weight: 300;
+    min-height: 180px;;
     background-color: red;
 }
