--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -11,8 +11,31 @@
 
 body{
     -webkit-font-smoothing: subpixel-antialiased;
-    font-family: "Zilla Slab";
+    font-family: "Zilla Slab","Roboto Slab",serif;
     font-weight: 300;
     min-height: 180px;;
-    background-color: red;
+    background-color: #fff;
+    padding: 1em 1em 1em 25vw;
+}
+code {
+    font-size: 0.85em;
+    color: #00AEFF;
+}
+h1,h2,h3,h4,h5,h6{
+    color:#000;
+    font-family: Quicksand;
+}
+
+a { 
+	color: #000;
+	text-decoration: none; 
+	-webkit-transition: box-shadow 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000), color 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+    -moz-transition: box-shadow 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000), color 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+    -o-transition: box-shadow 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000), color 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+    transition: box-shadow 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000), color 150ms cubic-bezier(0.770, 0.000, 0.175, 1.000); /* easeInOutQuart */
+    box-shadow: inset 0 -0.07em 0 #ec008c;
+}
+a:hover { 	
+    box-shadow: inset 0 -0.85em 0 #ffff00;
+    color: #000;
 }
