--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -7,6 +7,11 @@
 
 :root{
     font-size: 18px;
+    line-height: 1.5em;
+}
+
+html, body {
+    overflow-y: hidden;
 }
 
 body{
@@ -22,6 +27,7 @@ code {
     color: #00AEFF;
 }
 h1,h2,h3,h4,h5,h6{
+    margin: 0.25em 0 0.5em 0;
     color:#000;
     font-family: Quicksand;
 }
@@ -38,4 +44,46 @@ a {
 a:hover { 	
     box-shadow: inset 0 -0.85em 0 #ffff00;
     color: #000;
+}
+
+.screen {
+    width: 200vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background: #000;
+    transition: left 0.6s ease-out;
+}
+.screen-bg {
+    display: inline-block;
+    width: 100vw;
+    height: 100vh;
+    background: #000 no-repeat center/25vw url('/assets/images/logo-lodge-w.svg');
+}
+.screen-slashes {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    display: block;
+    width: 85vw;
+    height: 100vh;
+    background: transparent no-repeat center/cover url('/assets/images/slashes-overprint.svg');
+}
+.screen-mask {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 50;
+    display: block;
+    width: 25vw;
+    height: 100vh;
+    background: #fff;
+}
+.demo-panels {
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+    transition-delay: 0.5s;
 }
