--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -75,7 +75,7 @@ a:hover {
 .screen-mask {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -1vw;
     z-index: 50;
     display: block;
     width: 40vw;
@@ -85,5 +85,5 @@ a:hover {
 .demo-panels {
     opacity: 0;
     transition: opacity 0.3s ease-out;
-    transition-delay: 0.5s;
+    transition-delay: 0.6s;
 }
