quick fixes for site

--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -20,7 +20,7 @@ body{
     font-weight: 300;
     min-height: 180px;;
     background-color: #fff;
-    padding: 1em 1em 1em 25vw;
+    padding: 1em 1em 1em 19vw;
 }
 code {
     font-size: 0.85em;
@@ -83,7 +83,9 @@ a:hover {
     background: #fff;
 }
 .demo-panels {
+    position:relative;
     opacity: 0;
     transition: opacity 0.3s ease-out;
     transition-delay: 0.6s;
+    z-index: 1200;
 }
