--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 /* Brand starter pack */
-@import url('https://fonts.googleapis.com/css?family=Quicksand|Zilla+Slab:300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400&family=Zilla+Slab:wght@300;700&display=swap');
 
 *, *::before, *::after{
     box-sizing: border-box;
@@ -21,12 +21,12 @@ code {
 h1,h2,h3,h4,h5,h6{
     color:#000;
     font-family: Quicksand;
+    font-weight: 400;
 }
 h1{
     font-size: 5em;
     line-height: 1em;
     margin-bottom: 0;
-    font-weight: 300;
 }
 h2 {
     font-size: 1.65em;
