--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -96,8 +96,8 @@ b {
     position:relative;
     opacity: 0;
     margin-left: 0;
-    transition: all 0.3s ease-out;
-    transition-delay: 0.6s;
+    transition: all 0.2s ease-out;
+    transition-delay: 0.4s;
     width:1000vw;
     z-index: 1200;
 }
@@ -120,7 +120,7 @@ b {
     margin-top: 1.25em;
 }
 .demo-videolisting img {
-    display: inline-block;
+    display: block;
     float: left;
     margin-right: 1em;
     height: 50px;
