moving towards a BEM
...ive had a half-scrawled "need to fix up the CSS" plan for ages and better class naming has been on there for a while. BEM was the likely target and today @fricto reminded me to circle back. This isn't a proper clean-up, but enough that public-facing stuff should be better off!

Gets us a little closer on #8

--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -26,6 +26,7 @@ body{
     background-position: top -205px center;
     background-size: 1800px auto;
 }
+
 code {
     font-size: 0.85em;
     color: #00AEFF;
@@ -126,4 +127,26 @@ b {
     height: 50px;
     width: auto;
     border-radius: 0.5em;
+}
+.demo-overlay {
+    display: none;
+}
+
+/* Styles for the embed when shown in an overlay */
+.vv__embed-overlay body {
+    min-height: 360px;
+    background-position: bottom -375px left -1092px;
+    background-size: 3200px auto;
+}
+
+.vv__embed-overlay .screen {
+    display: none;
+}
+
+.vv__embed-overlay .demo-panels {
+    display: none;
+}
+
+.vv__embed-overlay .demo-overlay {
+    display: block;
 }
