--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -1,19 +1,17 @@
-/* Brand starter pack */
+/* Resets, fonts, baseline */
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400&family=Zilla+Slab:wght@300;700&display=swap');
-
 *, *::before, *::after{
     box-sizing: border-box;
 }
-
 :root{
     font-size: 18px;
     line-height: 1.5em;
 }
 
+/* Body element base styles, links, headings, type styles */
 html, body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
-
 body{
     -webkit-font-smoothing: subpixel-antialiased;
     font-family: "Zilla Slab","Roboto Slab",serif;
@@ -26,18 +24,12 @@ body{
     background-position: top -205px center;
     background-size: 1800px auto;
 }
-
-code {
-    font-size: 0.85em;
-    color: #00AEFF;
-}
 h1,h2,h3,h4,h5,h6{
     margin: 0.25em 0 0.5em 0;
     color:#000;
     font-family: Quicksand;
     font-weight: 400;
 }
-
 a { 
 	color: #000;
 	text-decoration: none; 
@@ -51,48 +43,32 @@ a:hover {
     box-shadow: inset 0 -0.85em 0 #ffff00;
     color: #000;
 }
-
 b {
     font-weight: 700;
 }
+button{
+    border:0;
+    padding:0.75em 1.75em;
+    border-radius:0.5em;
+    margin-top:1em;
+    background-color:#000;
+    color:#fff;
+    font-family:Helvetica,Arial,sans-serif;
+    font-size:0.65em;
+    text-transform:uppercase;
+    font-weight:bold;
+    outline: none;
+}
+button:hover{
+    background-color:#ec008c;
+    color:#000;
+}
+code {
+    font-size: 0.85em;
+    color: #00AEFF;
+}
 
-.screen {
-    width: 200vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    background: #000;
-    transition: left 0.6s ease-out;
-    overflow:hidden;
-}
-.screen-bg {
-    display: inline-block;
-    width: 100vw;
-    height: 100vh;
-    background: #000 no-repeat center/25vw url('/assets/images/logo-lodge-w.svg');
-}
-.screen-slashes {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 100;
-    display: block;
-    width: 85vw;
-    height: 100vh;
-    background: transparent no-repeat center/cover url('/assets/images/slashes-overprint.svg');
-}
-.screen-mask {
-    position: absolute;
-    top: 0;
-    right: -1vw;
-    z-index: 50;
-    display: block;
-    width: 40vw;
-    height: 100vh;
-    background: #fff;
-}
+/* Demo panels and the screen that covers them on load */
 .demo-panels {
     position:relative;
     opacity: 0;
@@ -131,22 +107,67 @@ b {
 .demo-overlay {
     display: none;
 }
+.screen {
+    width: 200vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    background: #000;
+    transition: left 0.6s ease-out;
+    overflow:hidden;
+}
+.screen__bg {
+    display: inline-block;
+    width: 100vw;
+    height: 100vh;
+    background: #000 no-repeat center/25vw url('/assets/images/logo-lodge-w.svg');
+}
+.screen__slashes {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    display: block;
+    width: 85vw;
+    height: 100vh;
+    background: transparent no-repeat center/cover url('/assets/images/slashes-overprint.svg');
+}
+.screen__mask {
+    position: absolute;
+    top: 0;
+    right: -1vw;
+    z-index: 50;
+    display: block;
+    width: 40vw;
+    height: 100vh;
+    background: #fff;
+}
 
 /* Styles for the embed when shown in an overlay */
-.vv__embed-overlay body {
+.lodge__embed--overlay body {
     min-height: 360px;
     background-position: bottom -375px left -1092px;
     background-size: 3200px auto;
 }
-
-.vv__embed-overlay .screen {
+.lodge__embed--overlay .screen {
     display: none;
 }
-
-.vv__embed-overlay .demo-panels {
+.lodge__embed--overlay .demo-panels {
     display: none;
 }
-
-.vv__embed-overlay .demo-overlay {
+.lodge__embed--overlay .demo-overlay {
     display: block;
+    padding:2em;
+}
+
+/* Mobile-only tweaks */
+@media only screen and (max-device-width: 1024px) {
+    .lodge__embed--overlay body {
+        background-position: bottom -600px left -1092px;
+    }
+    .lodge__embed--overlay .demo-overlay {
+        padding:4em 1em;
+    }
 }
