--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -48,7 +48,7 @@ b {
 }
 button{
     border:0;
-    padding:0.75em 1.75em;
+    padding:0.75em 2em;
     border-radius:0.5em;
     margin-top:1em;
     background-color:#000;
@@ -164,10 +164,14 @@ code {
 
 /* Mobile-only tweaks */
 @media only screen and (max-device-width: 1024px) {
+    button {
+        width:90vw;
+        padding:1.25em;
+    }
     .lodge__embed--overlay body {
         background-position: bottom -600px left -1092px;
     }
     .lodge__embed--overlay .demo-overlay {
-        padding:4em 1em;
+        padding:10vw 5vw;
     }
 }
