On-screen confirmation for modals
Rounds out the demos, functionality-wise.

--- a/assets/css/embed.css
+++ b/assets/css/embed.css
@@ -172,6 +172,6 @@ code {
         background-position: bottom -600px left -1092px;
     }
     .lodge__embed--overlay .demo-overlay {
-        padding:10vw 5vw;
+        padding:15vh 5vw 0 5vw;
     }
 }
